# yadisk-client

./: CMakeLists.txt  README.md
examples/: copy.cpp  info.cpp  list.cpp  mkdir.cpp  move.cpp  patch.cpp  publish.cpp  remove.cpp  resource.cpp  unpublish.cpp
include/yadisk/: client.hpp
sources/: callbacks.hpp  client.cpp
tests/client/: info.cpp
